swagger definition added for the permit-service
